# amyrin

./: .gitignore  README.md  amyrin.service  config.example.yml  docker-compose.yml  onyx.code-workspace  pyproject.toml  requirements.txt  start.py
bot/: Dockerfile  bot.service  bot.service.example  config.example.py  requirements.txt  setup.sh  start.py  start.sh  test.py
bot/core/: bot.py  constants.py  context.py
bot/modules/: context.py  hotreload.py  jishaku.py  routes.py
bot/modules/cogs/: __init__.py  checks.py  developer.py  documentation.py  flags.py  fun.py  help.py  imaging.py  media.py  meta.py  miscellaneous.py  nonsense.py  utility.py
bot/modules/events/: errors.py  message_cache_handler.py
bot/modules/util/: converters.py  flags.py  timer.py  updater.py
bot/modules/util/documentation/: parser.py
bot/modules/views/: base.py  docs.py  paginator.py  pull.py  song.py
bot/tests/: get_all_modules.py  google_scraper.py
core/: __init__.py  bot.py  context.py
exts/: developer.py  errors.py  help.py  meta.py
modules/: hotreload.py  jishaku.py
modules/events/: errors.py
modules/util/: executor.py
tests/: print_info.py
utils/: __init__.py  executor.py  updater.py
web/: .env.example  Dockerfile  app.py  package-lock.json  package.json  requirements.txt  setup.sh  start.sh  tailwind.config.js  web.service  web.service.example
web/globals/: styles.css
web/routers/pages/: dashboard.py  index.py
web/static/css/: output.css  twemoji.min.css
web/templates/: 404.html  index.html
web/templates/dashboard/: index.html
(+21 files in other folders)
